<resources>
    <string name="app_name">SnapCars</string>
    <string name="proceed">Proceed</string>
    <string name="enter_your_phone">Phone</string>
    <string name="resend">Resend</string>
    <string name="didnt_recieve_code">Didn\'t recieve activation code yet?</string>
    <string name="enter_your_name">Name</string>
    <string name="enter_your_email">Email</string>
    <string name="enter_your_area">Area</string>
    <string name="enter_your_password">Password </string>
    <string name="confirm_your_password">Confirm new password</string>
    <string name="register">Sign up</string>
    <string name="reset">Reset</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="forget_password">Forgot password ?</string>
    <string name="sign_in">Login</string>
    <string name="home">Home</string>
    <string name="market">Market</string>
    <string name="chat">Activate chat</string>
    <string name="account">Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="explorer">Market</string>
    <string name="near_by">Nearby</string>
    <string name="filter">Filter</string>
    <string name="cart">Cart</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="old">Used</string>
    <string name="newc">New</string>
    <string name="logo">Logo</string>
    <string name="select_brand_first">Please select the brand</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="send">Send</string>
    <string name="complete_register">Complete registration</string>
    <string name="you_have_successfully_verified_your_mobile_number">You have successfully verified your mobile number</string>
    <string name="success">Activation Successfully</string>
    <string name="activate">Activate</string>
    <string name="please_fill_the_activation_code_below">Please enter the activation code below</string>
    <string name="nex_t">Next</string>
    <string name="error_network">There is no internet connection</string>
    <string name="error_communicating_with_server">Sorry, an error has occurred</string>
    <string name="this_account_is_suspend">This account is suspended</string>
    <string name="do_you_want_to_see_hot_zones">Do you want to see the Hot Zones?</string>
    <string name="gps_required">GPS Required</string>
    <string name="user">Individual</string>
    <string name="show_room">Showroom</string>
    <string name="phone">Phone number</string>
    <string name="dumy_phone">0123456789</string>
    <string name="working_hours">Working hours</string>
    <string name="dumy_hours">5 H</string>
    <string name="location">Go to location</string>
    <string name="dumy_location">Egypt</string>
    <string name="edit">Edit</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="gender">Gender</string>
    <string name="you_should_select_user_type">Please select user type</string>
    <string name="you_should_select_your_gender">Please select your gender</string>
    <string name="edit_profile">Edit profile</string>
    <string name="name">Name</string>
    <string name="dumy_name">Mina nba</string>
    <string name="dumy_email">mina@gmail.com</string>
    <string name="match_car_notification">Matching car notification</string>
    <string name="chat_notification">Chat notification</string>
    <string name="offer_notification">Offer notification</string>
    <string name="save">Save</string>
    <string name="cant_update">Failed to update your profile, please try later </string>
    <string name="updated">Your profile is updated  </string>
    <string name="showroom_name">Showroom name</string>
    <string name="from">From :</string>
    <string name="to">To :</string>
    <string name="dealing_with">I deal with</string>
    <string name="pick_location_from_gps">Pick location from GPS </string>
    <string name="you_should_block">You have blocked this person successfully</string>
    <string name="this_person_is_not_available_now">This person is not available now</string>
    <string name="start_chat">Start chat</string>
    <string name="block_member">Block</string>
    <string name="cars">Vehicles</string>
    <string name="sold">Sold</string>
    <string name="available">Available</string>
    <string name="logout">Log out</string>
    <string name="settings">Settings</string>
    <string name="update_phone">Update phone</string>
    <string name="new_cars">New</string>
    <string name="old_cars">Used</string>
    <string name="all_cars">Both</string>
    <string name="my_profile">My profile</string>
    <string name="showroom_profile">Showroom profile</string>
    <string name="my_favorites">Be a VIP Showroom</string>
    <string name="my_favorite">My favorites</string>
    <string name="my_cars">My cars</string>
    <string name="my_interests">My interests</string>
    <string name="blocked_members">Blocked Members</string>
    <string name="payment_history">Payment History</string>
    <string name="discounts_and_promotions">Discounts &amp; Promotions</string>
    <string name="deadline_with">I Deal With</string>
    <string name="share_app">Share</string>
    <string name="feedback">Feedback</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="go_location">Go to location</string>
    <string name="verified">Verified</string>
    <string name="location_updated_successfully">Location has been updated successfully</string>
    <string name="review_please">Note</string>
    <string name="car_available_for_sell">Cars available for sale :\t</string>
    <string name="rate">Rate showroom</string>
    <string name="you_have_rated_successfully">You have rated this showroom successfully</string>
    <string name="you_should_rate">You should rate the user</string>
    <string name="you_have_rated_person">You have already rated this user</string>
    <string name="unverified">Unverified</string>
    <string name="showroom_numbers">Contact numbers</string>
    <string name="main_number">Main number</string>
    <string name="phone_number_1">Phone number 1</string>
    <string name="phone_number_2">Phone number 2</string>
    <string name="phone_number_3">Phone number 3</string>
    <string name="phone_number_4">Phone number 4</string>
    <string name="phone_number_5">Phone number 5</string>
    <string name="phone_number_6">Phone number 6</string>
    <string name="my_intersted">My interests</string>
    <string name="invalid_code">Activation code is wrong, please try again</string>
    <string name="email_optional">Email (optional)</string>
    <string name="mobile_verify">Mobile Verification</string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="recommended">It\'s recommended to be in the exact location before selecting your location</string>
    <string name="specify_wrking_hours">Please specify your working hours</string>
    <string name="you_should_pick_your_location">Please select your location</string>
    <string name="number_activated">Number activated</string>
    <string name="must_active">You must activate your number first</string>
    <string name="un_block">Unblock</string>
    <string name="unblock_this_person">You have Successfully unblocked the user</string>
    <string name="add_interest">Add interest</string>
    <string name="year">Year</string>
    <string name="sar">\tSAR</string>
    <string name="select_category">Select category</string>
    <string name="km">Km</string>
    <string name="big_sale_and_discount">Big Sale &amp; Discount</string>
    <string name="nearby">Nearby</string>
    <string name="mvpi">Inspection Report Validity</string>
    <string name="report_status_and_guarantee">Report status and guarantee</string>
    <string name="select_type">Select type</string>
    <string name="select_color">Select color</string>
    <string name="payment_type">Payment type</string>
    <string name="car_condition">Car condition</string>
    <string name="seller_type">Seller type</string>
    <string name="importer">Specification</string>
    <string name="gear_box">Transmission type</string>
    <string name="auto">Auto</string>
    <string name="normal">Manual</string>
    <string name="full_payment">Full payment</string>
    <string name="installments">Installments</string>
    <string name="transfer">Transfer</string>
    <string name="new_item">New</string>
    <string name="used">Used</string>
    <string name="damaged">Damaged</string>
    <string name="added_successfully">Interest is added successfully</string>
    <string name="exchange">Transfer</string>
    <string name="you_should_select_model_first">Please select car model first</string>
    <string name="you_should_select_brand_first">Please select car brand first</string>
    <string name="you_should_select_country">Please select your country first</string>
    <string name="car_km">Car KM</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="car_details">Car details</string>
    <string name="add_car_photos">Add car photos</string>
    <string name="free">Free</string>
    <string name="add_car">Add car</string>
    <string name="special">Special</string>
    <string name="please_add_car_images">Please add photos of the car</string>
    <string name="car_added_successfully">Car added successfully</string>
    <string name="select_brand"> Brand</string>
    <string name="manufacturing_year">Year</string>
    <string name="transmission_type">Transmission type</string>
    <string name="kilometers">Kilometers</string>
    <string name="engine_capacity">Engine capacity (CC)</string>
    <string name="condition"> Condition</string>
    <string name="method_of_sale">Method of sale</string>
    <string name="price">Price Details : </string>
    <string name="fixed_price">Fixed price</string>
    <string name="undetermined">Undetermined</string>
    <string name="map_view_location">Car view options</string>
    <string name="tracked_car">Moving Car</string>
    <string name="fixed_location">View car in market page</string>
    <string name="publish_car">Publish Car</string>
    <string name="high_line">Highline</string>
    <string name="comfort">Comfort</string>
    <string name="base_line">Baseline</string>
    <string name="standard">Standard</string>
    <string name="semi_auto">Semi auto</string>
    <string name="full_option">Full option</string>
    <string name="nstallments">Installments</string>
    <string name="agent_name">Agent name</string>
    <string name="discount_price">Car on Discount</string>
    <string name="installment">Installment</string>
    <string name="discount_before">Before</string>
    <string name="after">After</string>
    <string name="monthely">Monthly</string>
    <string name="monthely2">Monthly</string>
    <string name="left_side">Left side</string>
    <string name="right_side">Right side</string>
    <string name="front_side">Front side</string>
    <string name="back_side">Back side</string>
    <string name="inside_1">Inside 1</string>
    <string name="big_sale">Car on Discount</string>
    <string name="_0_800">0 - 800</string>
    <string name="_1000_1300">1000 - 1300</string>
    <string name="_1400_1600">1400 - 1600</string>
    <string name="_1800_2000">1800 - 2000</string>
    <string name="_2200_2800">2200 - 2800</string>
    <string name="_3000">3000+</string>
    <string name="show_al">Show All</string>
    <string name="block_reason">Block Reason</string>
    <string name="your_reason">Your Reason</string>
    <string name="notification">Notification</string>
    <string name="chatt">Chat</string>
    <string name="installmentss">Installment</string>
    <string name="favoritee">favorite</string>
</resources>