<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:background="@color/colorLayoutBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/edit_profile"
            android:textColor="#000" />

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:src="@drawable/back_left" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/border_gradient"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/margin_nano"
                    android:background="@drawable/border_gradient" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_avatar"
                    android:layout_width="86dp"
                    android:layout_height="86dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/margin_nano"
                    android:src="@drawable/ic_launcher_background" />

                <RelativeLayout
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignEnd="@+id/image_avatar"
                    android:layout_alignTop="@+id/image_avatar"
                    android:background="@drawable/background_edit_image">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/baseline_cloud_upload_white_18dp" />

                </RelativeLayout>

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">

                <com.intcore.snapcar.core.widget.rxedittext.name.NameEditText
                    android:id="@+id/ed_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/colorTextPrimary"
                    android:hint="@string/name"
                    tools:text="@string/dumy_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:focusable="false">

                <com.intcore.snapcar.core.widget.rxedittext.name.NameEditText
                    android:id="@+id/et_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_micro"
                    android:backgroundTint="@color/colorTextPrimary"
                    android:drawableEnd="@drawable/big_down"
                    android:focusable="false"
                    android:hint="@string/country"
                    android:textSize="@dimen/textSizeText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:focusable="false">

                <com.intcore.snapcar.core.widget.rxedittext.name.NameEditText
                    android:id="@+id/et_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_micro"
                    android:backgroundTint="@color/colorTextPrimary"
                    android:drawableEnd="@drawable/big_down"
                    android:focusable="false"
                    android:hint="@string/city"
                    android:textSize="@dimen/textSizeText" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:errorTextAppearance="@style/error_appearance">

                <com.intcore.snapcar.core.widget.rxedittext.area.AreaEditText
                    android:id="@+id/ed_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/colorTextPrimary"
                    android:hint="@string/enter_your_area"
                    android:inputType="text"
                    tools:text="@string/dumy_location" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:errorTextAppearance="@style/error_appearance">

                <com.intcore.snapcar.core.widget.rxedittext.email.EmailEditText
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/colorTextPrimary"
                    android:hint="@string/email_optional"
                    android:inputType="textEmailAddress"
                    tools:text="@string/dumy_email" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/et_update_phone"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/phone"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/number_cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/right_cell" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorDivider" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_rounded_corner_rectangle_green"
                android:elevation="16dp"
                android:text="@string/save"
                android:textColor="#fff" />
        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/snack_bar_container"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</RelativeLayout>